--- a/View/OtherForm/MailBox.resx
+++ b/View/OtherForm/MailBox.resx
@@ -117,4 +117,217 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Detail.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Date.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuTextBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAY4AAAAvCAYAAAD0My2DAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAHnSURBVHhe7dq/ihNRFMDhKbfcR9jS0iex9hFsfBbBZ/AV
+        bDeZyR/Tp9hUCUJE4hBkhOwQhzDeMRckRISDZb4PTpGcm/rH5aYAgP8yGo1ez2azx8lkUo/H494YY8zt
+        zdCA1IJPqQlvch6upeX9cGi5XDZ1Xfdt2/YA3KahAfv9vl+tVofpdPqUGvGQc/HHEI3dbpd/AgBnTdP0
+        qRGfUzzucjKKoqqqt6kqP/IZALiwXq/bFI/3ORvn28ZwJQGAvzkcDsO7x5ecjaIoy/K567q8BoBrw6N5
+        zkZRDB8A4F+EA4AQ4QAgRDgACBEOAEKEA4AQ4QAgRDgACBEOAEKEA4AQ4QAgRDgACBEOAEKEA4AQ4QAg
+        RDgACBEOAEKEA4AQ4QAgRDgACBEOAEKEA4AQ4QAgRDgACBEOAEKEA4AQ4QAgRDgACBEOAEKEA4AQ4QAg
+        RDgACBEOAEIuwlGWZXc6nfIKAK5dhGM6nT41TZNXAHDpeDz2VVU1ORu/w/Fus9l0eQ8AF3a7XT+bzT7m
+        bBTFaDS6S/H42rZtPgIAZ8NTxnw+/55a8ZCzcZa+eJlq8m273f7sOpcPgFs3BKOu636xWOzT5eJVzsWl
+        FI/7FI8PZVk+D48gxhhjbneGP06lJjymNrzImQCAqKL4BfuHlirEvojmAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAZoAAAKzCAYAAAAnTcsAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAuSSURBVHhe7dyhbhxXGIBRw8JAwz5CYKAfITDQsDAwMG8Q
+        6EcoDAwsDCwsLCwsDPKm/3hvZbl2rbV3P6mqz5Guxr47M8v2053dmTMA+E/a7XZvvn//fjHjcsZHwzAM
+        4385ts/47bP+Yn38d+ZNzicuP11fX3+ZvwF4gaYBX2fzYcaPKw/Hm5O9mvFxTv5ttgBwY7pwNZvzlYvn
+        mRNczIn+vDkjAPzDtgjZ7XbvVjaeZo6/tIoB4EAfVz4OMwdsX/4AwMFmcfJpZeRxs+92ucxKBoAn2340
+        tnLysNnn3HcyADzXWqi8Xlm5b1v27HcFgOeZlnxeWblrXttWMy6ZAXAK91c1M7ndgAMAR5uFy9XKy62Z
+        3O72BICjTVP+WHnZm7nt7n8AOKXby2frAZkAcDJ3nhgw/7/dTwPAaUxo3q/M3Kxo3q95ADiV28fSbP/s
+        5wDgZIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0
+        AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACk
+        hAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQG
+        gJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU
+        0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAA
+        kBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJAS
+        GgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoA
+        UkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJC
+        A0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNA
+        SmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpo
+        AEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABI
+        CQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkN
+        ACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQAp
+        oQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEB
+        ICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAl
+        NACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQA
+        pIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSE
+        BoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaA
+        lNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQ
+        AJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQ
+        EhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIa
+        AFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBS
+        QgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkID
+        QEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BK
+        aABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgA
+        SAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJ
+        DQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0A
+        KaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmh
+        ASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEg
+        JTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0
+        AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACk
+        hAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQG
+        gJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU
+        0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAA
+        kBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJAS
+        GgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoA
+        UkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJC
+        A0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpoAEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNA
+        SmgASAkNACmhASAlNACkhAaAlNAAkBIaAFJCA0BKaABICQ0AKaEBICU0AKSEBoCU0ACQEhoAUkIDQEpo
+        AEgJDQApoQEgJTQApIQGgJTQAJASGgBSQgNASmgASAkNACmhASAlNACk7oTmw34OAE7mNjS73e7dmgSA
+        U/mwMnOzornYzwHAyVyuzNyE5nw/BwCnsdvt3qzM7F1fX/++XgOAo0xTvs3mh5WYvZn8tH8ZAI4zTfm8
+        8nJr5l/vXwaAo71deblrK9DaAQCeZVry68rKffO6VQ0Ax3p4NfO32cHNmwA8y6xmrlZOHjc7/ryOAYCD
+        TDu+zubuL83+zbaj2ABwqBWZVysjh5uDPGwTgEdtl8tmc9hK5iFz8MWc5JebswHAMm34bTaPf/H/FNvJ
+        tstpM7a7PQF4oaYDX2Zz+xyzwrzB9hDO7ddp26U1wzAM42WM7bP/+ZfIAOD0zs7+AnNbw9Iqe2PAAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="bunifuPanel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUQAAAHRCAYAAAASQcA2AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAWPSURBVHhe7daxDQIxFAVBh5RBSEgplEBIGVR+h4/bBFrw
+        jPRk6Rew8gDgz77v17m3mdliu5XB0zzc5wBW9SiH3yAelQRY1bscCiKwPEEEiCACRBABIogAEUSACCJA
+        BBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBAB
+        IogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIII
+        EEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFE
+        gAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIgg
+        AkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAE
+        ESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEi
+        iAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQ
+        QQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSA
+        CCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCAC
+        RBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQR
+        IIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKI
+        ABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBB
+        BIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAI
+        IkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJE
+        EAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEg
+        gggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogA
+        EUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEE
+        iCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgi
+        QAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCCCBBBBIggAkQQ
+        ASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAARRIAIIkAEESCC
+        CBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEiCACRBABIogAEUSACCJABBEggggQQQSIIAJEEAEiiAAR
+        RIAIIkAEESCCCBBBBIggAkQQASKIABFEgAgiQAQRIIIIEEEEyE8QH+cNYD3btr3K4WnennPHT9HMbJkd
+        MZzvpRQCMMYYHzYH0L3hN+3yAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="bunifuButton8.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton6.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAR8AAAAxCAYAAADjhq2/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADVSURBVHhe7dSxDYNAAARBKkEidLcmcXOUQf6gdxG/yYx0
+        0lWw2+c3rv37PGZmqza7s80DsNLsjvgAy4kPkBAfICE+QEJ8gIT4AAnxARLiAyTEB0iID5AQHyAhPkBC
+        fICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgACfEBEuIDJMQHSIgPkBAfICE+QEJ8gIT4AAnxARLi
+        AyTEB0iID5AQHyAhPkBCfICE+AAJ8QES4gMkxAdIiA+QEB8gIT5AQnyAhPgAiX98jnPc85iZrdpxjvsF
+        G+p/5JBRwyIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAPQAAABACAYAAAAtdFqdAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAWmSURBVHhe7d1faBxFHAfwe+xjH3247O416TXNv1ajp4Jg
+        EYRAoTTQYrVUAxoMkhA1lja0QihJ7l/CXUooVGirKGgpChEqBaEiRSX0IYLFUpBIQR9qerm7zf1JUrhx
+        v3tzKaVDeknvkt3L9wefQNq57Bby7ezOzsx6qlH6JbFNj4l9dXFxsi4mhvRo9gtfyJwBLS4E0VZR+r03
+        wpkryIKdBysblu0yLs4snKB1sl1GxLyqjS/l60/PJhvf++FBU9eUaH3jS/FsR8T24t53ibaM0u9966GL
+        AlkAZEMbW1o0Qub1unihR58Uz8gYbX7pE4WXcGI4QX//9EJb53kRaO9R/uOI6KE9BybFrt4bWT2ay6IX
+        904UOmSsNr70s6IRQd4x9E8SJ6Y6YSIqD3rxhsE7SQQbnaSMWfULlwe4H9BH59MMMlFlIdjoJNFZotOU
+        satOFS+vU/dxP6A6GSKqDHSWxvBcQovkDsv4Vbb00dQH9Z/enQsE+pQnQESVhbGohhN/JoxQckTGsDJl
+        9coX/B/eTHCwi2jjNb7/Y0oPpq/hcbCM5PoL1/LNRy/nVAcioo3R0vnZsm/4/q9PFWr0zAwzkTO0Hphc
+        9o2mfpbxXFvp4YWPdvX+klT9YCLaHE3vTJlGMHlOxrS8wtS0+lN/zfGemch5/AO/z2vR3DEZ19XLCrNh
+        DCf+42g2kTOho8UTp7ImoGAQjBNGiJyt/bUhoYczszK26rJ6573GmXsp1Q8gImfZefxWyhsTB2V8Hy/2
+        zkTusWovbQ+EnZ7lqDaRi/j7p1NaJN8tY/ywsMqD65WJ3OX5V04IPZKfkzEuFlZQYU2m6gNE5GxYnfXI
+        iDd2TcBCa1VjInK2pmPfPtCiuZiMs8djhM3f9uyPKRsTkbO1v3pK6NHMv3aYsReYHsllOCuMyL2w4Yi9
+        IYI3XjjiH5hJqxoRkTtgQ07ssmvdP4uT+EbViIjcATvrYrtsjxZdPNfy1jfKRkTkDvaWRSHzugf7aGPr
+        XVUjInKH514fEVp44TYnlBDVgJUJJviCb1SNiMg98OodD76o/pKI3IWBJqohDDRRDWGgiWoIA01UQxho
+        ohrCQBPVEAaaqIYUAz22mH7h5Y+VDYjIPYqBDi/cxjxQVQMicgd0yuicuXUvUQ1Y2dIXayixllLViIjc
+        AVuIYSsxT11MDDV1TSkbEZE7tB66aAU6cwWB7vL3Ty+oGhGRO6BTRudsv21SD5kMNJGL4a03ePuNvfMn
+        R7qJ3GtlhLtU2vjS8O6u77lRIJELrdw/lwr7+WJfX1VjInK2hsE7Se9EoUPGuVjYeR878Ks+QETOFAj0
+        WZfbeVO/JLbJKBfL+sM+f+8NU/UhInKm5re/y+th86yM8aOFmSaYcaL6IBE5CwbD9Eg28VjvXCpvTBzc
+        efxWSvVhInKWxp6fMtrY8icyvupiL03kfE/snUuFh9N4SK36IUTkDP7+6ZQWyXfL2K5eesgctLpzPsYi
+        cqDmo5dzRih1Qca1vPIFk1+3vPlVTvUDiWhztO2PLxnB9LSMafmFa3MjmLzJ914ROQPmiRij87PWbfF2
+        GdO1FT6oB827nOdNtLkQ5h1n7v2NxVQynusrhNoIpv5oOfx5VnUgIqou+zK72DM/XZhLhctv30hyigNl
+        RBvLHgCz7pnXfZm9WmH0GxPB+fpZourCc2Y8mlrzaPZaC6s68E5pzPvGQVUnQ0Trg8UWu7uvZTBppOzn
+        zJUoLObAQXFwnITq5IioPIH2HnuhhRHOJPVoduiJM8CqUTioffCx5RzmgGOhNXttovKgI2zrPC/8AzNp
+        bXzJXjVVlXvl9RQWdmDXBGyFgqmj2LQMW4viOTbXWdNWh3EnZAGQDXSA6AiNiHnVGy8c2ZQeudyy/pfZ
+        hx0IsU+wL2TOYPMEvKaDaKvCuBOyAMgGOkAZlwqWx/M//197BMbV2L4AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
