--- a/View/ViewManageOfStudent/StudentManageForm.resx
+++ b/View/ViewManageOfStudent/StudentManageForm.resx
@@ -118,6 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="checkAllStudentBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAREAAAAqCAYAAACUXm9UAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAACvSURBVHhe7dSxEUBAAABBlXzL9KcM+aMAM5hLN9jo8lvG
+        NvexnSfAf3O/J/IUAL4xESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAx
+        ESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAxESAx
+        ESAxESAxESAxESBZxjqPpwDwap3HBaIQskxmQNSrAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAmUAAACRCAYAAACCE88BAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -137,7 +146,7 @@
         erwmAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="bunifuPictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureAccountBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAMAAADDpiTIAAAABGdBTUEAALGPC/xhBQAAAjpQTFRFxtr8
         xdr8v9X7t9D7r8z7q8n7qMf6psX6o8P6wNX7wtf8scz7nsH6kLf5gq74dab3aJ33X5j2Xpf2aJ73g6/4
